--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jsfive": "^0.2.3",
+    "prettier": "^2.3.1",
+    "prettier-eslint": "^10.1.0",
     "vue": "^3.0.0",
+    "vue-eslint-parser": "^7.6.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -20,9 +24,10 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-vue": "^7.11.1",
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
@@ -35,5 +40,10 @@
       "vue-cli-service lint",
       "git add"
     ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "none"
   }
 }
