--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,14 @@
         "no-multi-spaces": [
             "error"
         ],
-        "vue/no-multiple-template-root": "off"
+        "vue/no-multiple-template-root": "off",
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "max-len": [
+            "error",
+            { "code": 999 }
+        ]
     }
 }
