--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "jsfive": "^0.2.3",
+    "leaflet": "^1.7.1",
     "prettier": "^2.3.1",
     "prettier-eslint": "^10.1.0",
     "vue": "^3.0.0",
